fix:  overflow de texto, cambiar grosor texto

--- a/client/src/css/materialize-mod.css
+++ b/client/src/css/materialize-mod.css
@@ -2725,6 +2725,11 @@ i.sidenav-button{
   border-radius: 8px;
 }
 
+i.estudio-button{
+  font-size: 3rem;
+  border-radius: 8px;
+}
+
 img.responsive-img,
 video.responsive-video {
   max-width: 100%;
@@ -4955,7 +4960,8 @@ small {
   font-size: x-large;
   font-weight: bold;
   letter-spacing: .2px;
-  line-height: 54px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .card-subtitulo {
@@ -9445,6 +9451,10 @@ thead {
   color: #000000;
 }
 
+.c-98D0A1 {
+  color: #98D0A1;
+}
+
 .espacio-vertical {
   line-height: 20px;
 }
@@ -9476,13 +9486,54 @@ thead {
 }
 
 .fixed-height {
-  height: 140px;
+  min-height: 120px;
+  max-height: fit-content;
   display: flex;
   align-items: center;
 }
 
 .row-parametros {
   display: flex;
-  flex-direction: row;
+  align-items: baseline;
+  flex-wrap: wrap;
+}
+
+.no-margin-left {
+  margin-left: unset !important;
+}
+
+.card-mini {
+  width: 100%;
+  max-width: 220px;
+  min-height: fit-content;
+  border-radius: 12px;
+  background: #F9F9F9;
+  line-height: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.card-mini-flex{
+  display: flex;
+  justify-content: center;
   align-items: center;
+}
+
+.card-mini-text {
+  font-size: medium;
+  font-weight: 500;
+  line-height: 18px;
+}
+
+.card-mini-separation{
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.texto-grande {
+  font-size:x-large;
+  line-height: 40px;
+  font-weight: 500;
 }
